release 1.0.3 (2009-03/04)
- Fixed issue with servlet or filter initialization parameters not being
  copied to the ResourceConfig for Web applications that define and declare
  their own ResourceConfig implementation.
- Fixed two issues with the Apache HTTP client integration:
  1) Requests are repeatable by default and requests are buffered. Setting the
     property ClientConfig.PROPERTY_CHUNKED_ENCODING_SIZE to a value > 0 will
     turn off buffering.
  2) Connections are correctly released when a response entity is present
     but the client does not consume the entity. It is important if
     ClientResponse is used without reading an entity (when one is present) or
     entities are processed that are instances of Closeable that the response
     or stream is closed respectively after processing the response.
- The project version and build number are now correctly included in the
  jersey-bundle.jar and thus those values now appear correctly in generated
  WADL documents.
- Fixed issue 219
  https://jersey.dev.java.net/issues/show_bug.cgi?id=219
  Refactored com.sun.jersey.spi.container.servlet.ServletContainer to
  inherit from HttpServlet.
- Fixed issue 217
  https://jersey.dev.java.net/issues/show_bug.cgi?id=217
  SpringServlet was failing when used as a filter.
- Fixed issue 209
  https://jersey.dev.java.net/issues/show_bug.cgi?id=209
  UriBuilder.buildFromEncoded(Object...) throws IllegalArgumentException if a
  template does not have an associated value declared in the object array.
- Fixed issue 216
  https://jersey.dev.java.net/issues/show_bug.cgi?id=216
  If a URI template contains two or more declarations of a template variable
  then encoded value for the template variable is used for all declarations.
  Previously the encoded value was only used for the first declaration and
  the non-encoded value for subsequent declarations.
  Previously the
- Fixed issue 208
  https://jersey.dev.java.net/issues/show_bug.cgi?id=208