@@ -1,4 +1,8 @@
 release 1.0.3 (2009-03/04)
+- Fixed issue 213 and 214
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=213
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=214
+  UriBuilder values check - hostname, port and queryParam values
 - Fixed issue with servlet or filter initialization parameters not being
   copied to the ResourceConfig for Web applications that define and declare
   their own ResourceConfig implementation.
